	  _POSIX_VDISABLE outside the main input/output loop, as it
	  doesn't need to be called every time through the loop.  Call it
	  instead of cbreak() on such systems, as it overrides cbreak()
	  anyway. (DLR)
	- Add more descriptive comments explaining the termios and
	  curses setup routines, and turn the keypad on before setting
	  the input mode. (DLR)
- search.c:
  regexp_cleanup()
	- Only do anything if REGEXP_COMPILED is set. (David Benbennick)
  search_abort()
	- Only test if the mark is set when NANO_SMALL isn't defined.
	  (David Benbennick)
  search_init()
	- Add some more comments and comment tweaks, don't indicate that
	  the search has been canceled when we enter a blank string in
	  replace mode, only call regexp_init() when USE_REGEXP is set,
	  and return -1 instead of -3 since a canceled search and a
	  canceled replace should be mostly equivalent. (David
	  Benbennick)  DLR: Tweak to use the old behavior if we try to
	  search for invalid regexes.
  findnextstr()
	- Refactor to use a loop invariant, and tweak for greater
	  efficiency and simplicity.  Also modify so that all searches
	  start one character after (or before, if we're doing a
	  backwards search) the current one, as opposed to all searches
	  except for regex searches for "^" and the like, for
	  consistency with other searches. (David Benbennick)
  do_search()
	- Handle search_init()'s no longer returning -3 above. (David
	  Benbennick)
	- Port the code from do_replace_loop() to skip the current line
	  if we're searching for a regex with "^" and/or "$" in it and
	  end up on the same line to this function.  This fixes a
	  problem where doing a forward search for "^" on a file with
	  more than one line would erroneously stop at the magicline and
	  indicate that that was the only occurrence. (DLR)
  do_research()
	- Port David Benbennick's efficiency tweaks and the
	  aforementioned code ported from do_replace_loop() to this
	  function. (DLR)
  replace_regexp()