@@ -73,6 +73,10 @@ CVS code -
 	- Add more descriptive comments explaining the termios and
 	  curses setup routines, and turn the keypad on before setting
 	  the input mode. (DLR)
+	- Remove stray HAVE_GETOPT_LONG $ifdefs. (DLR)
+- nano.h:
+	- Move the NANO_H include guard up before the first #include.
+	  (DLR)
 - search.c:
   regexp_cleanup()
 	- Only do anything if REGEXP_COMPILED is set. (David Benbennick)
